--- a/status-board/Info.plist
+++ b/status-board/Info.plist
@@ -22,6 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Overpass-Bold-Italic</string>
+		<string>Overpass-Bold</string>
+		<string>Overpass-ExtraLight Italic</string>
+		<string>Overpass-ExtraLight</string>
+		<string>Overpass-Light-Italic</string>
+		<string>Overpass-Light</string>
+		<string>Overpass-Regular-Italic</string>
+		<string>Overpass-Regular</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
